fix issues with content too wide for slide

--- a/assets/application.css
+++ b/assets/application.css
@@ -98,12 +98,6 @@ header {
   z-index: 1000;
 }
 
-p > img {
-  display: block;
-  margin: 0 auto;
-  max-width: 100%;
-}
-
 header .fa {
   margin: 0 10px;
   font-size: 20px;
@@ -223,7 +217,15 @@ header .fa:hover {
 }
 
 .markdown {
+  max-width: 100%;
   overflow: scroll;
+}
+
+.markdown > img {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  max-height: 80vh;
 }
 
 .markdown pre {
@@ -231,6 +233,7 @@ header .fa:hover {
   margin: 15px;
   padding: 10px;
   box-sizing: border-box;
+  max-width: 100%;
   overflow-x: scroll;
 }
 
